--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -45,6 +45,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="ResetVR",Key=MotionController_Left_Grip1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=MotionController_Right_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ViewChange",Key=V,bShift=True,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Attack",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="UpDown",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="LeftRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="UpDown",Key=S,Scale=-1.000000)
